examples/test/testpolicy14612.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14612
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key29: value14
      key23: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value49
          key32: value24
      podSelector:
        matchLabels:
          key12: value46
          key25: value23
